# enterprise-mcp-hub

./: .env.example  .gitattributes  .gitignore  =1.50.0  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FUTURE_PLAN.md  Makefile  README.md  REVIEW_REPORT.md  SOURCES.md  STATUS.md  STREAMLIT_DELETE.md  TESTING.md  planning_report.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
.claude/: ralph-loop.local.md  settings.local.json  step-1-verified.txt  step-2-verified.txt  step-3-verified.txt
.playwright-mcp/: page-2026-04-04T12-06-54-736Z.yml
backend/: README.md  main.py  pyproject.toml
docs/: CurrentStatus.md  CurrentStatus_diff.md  IMPLEMENTATION_LOG.md  PRD.md  PRODUCTION_AUDIT_REPORT.md  README.md  References.md  evaluation_report.md  mypy_backlog.md  pillar1_progress.md  pillar2_implementation_plan.md  pillar2_progress.md  pytest_baseline_seeds.txt  step_1_5_plan.md  step_1_plan.md  step_2_plan.md  step_3_plan.md  troubleshooting.md
frontend/: README.md  eslint.config.mjs  vitest.config.ts
scripts/: build_esco_index.py  migration_roundtrip.sh  update_planning_report_paths.py
src/: cli.py  cli_view.py  dashboard.py  diagnostics.py  linkedin_import.py  main.py  preferences.py
tests/: conftest.py  qa_runner.py  test_api.py  test_circuit_breaker.py  test_cli.py  test_csv_export.py  test_cv_parser.py  test_cv_structured_parser.py  test_dashboard_data.py  test_database.py  test_deal_breakers.py  test_deduplicator.py  test_e2e_profile_upload.py  test_embeddings.py  test_evidence.py  test_feedback.py  test_jd_parser.py  test_linkedin_github.py  test_main.py  (+10 more)
(+292 files in other folders)
