[project]
name = "job360"
version = "2.0.0"
description = "Automated UK job search system — 48 sources, CV-based scoring, multi-channel delivery"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Ranjith36963"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
# Exclude E2E tests from default runs (they require a running dashboard)
# Run E2E tests explicitly: python -m pytest tests/e2e/ --no-header
addopts = "--ignore=tests/e2e"
markers = [
    "e2e: End-to-end browser tests requiring running Streamlit dashboard",
]

[tool.ruff]
line-length = 120
target-version = "py39"
